feat. Added User module, types, model, controller, route and services
